--- a/accumulo/pom.xml
+++ b/accumulo/pom.xml
@@ -10,7 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>simple-orm-accumulo</artifactId>
-    <name>Lumify: Simple ORM: Accumulo</name>
+    <name>Simple ORM: Accumulo</name>
     <packaging>jar</packaging>
 
     <dependencies>
