--- a/jetty-session-manager/pom.xml
+++ b/jetty-session-manager/pom.xml
@@ -10,7 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>simple-orm-jetty-session-manager</artifactId>
-    <name>Lumify: Simple ORM: Jetty Session Manager</name>
+    <name>Simple ORM: Jetty Session Manager</name>
     <packaging>jar</packaging>
 
     <properties>
