--- a/sql/pom.xml
+++ b/sql/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>lumify-simple-orm-sql</artifactId>
+    <artifactId>simple-orm-sql</artifactId>
     <name>Simple ORM: SQL</name>
     <packaging>jar</packaging>
 
