--- a/jetty-session-manager/pom.xml
+++ b/jetty-session-manager/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>org.neolumin.simpleorm</groupId>
         <artifactId>simple-orm</artifactId>
-        <version>0.1.0</version>
+        <version>0.1.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
