--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,8 @@
         <guava.version>17.0</guava.version>
         <zookeeper.version>3.4.6</zookeeper.version>
         <slf4j.version>1.7.10</slf4j.version>
+        <junit.version>4.11</junit.version>
+        <h2.version>1.3.175</h2.version>
 
         <maven.plugin.gpg.version>1.4</maven.plugin.gpg.version>
         <maven.plugin.javadoc.version>2.9.1</maven.plugin.javadoc.version>
@@ -103,9 +105,33 @@
                 <version>${accumulo.version}</version>
             </dependency>
             <dependency>
+                <groupId>org.apache.accumulo</groupId>
+                <artifactId>accumulo-minicluster</artifactId>
+                <version>${accumulo.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-api</artifactId>
                 <version>${slf4j.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-log4j12</artifactId>
+                <version>${slf4j.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.h2database</groupId>
+                <artifactId>h2</artifactId>
+                <version>${h2.version}</version>
+                <scope>test</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>junit</groupId>
+                <artifactId>junit</artifactId>
+                <version>${junit.version}</version>
+                <scope>test</scope>
             </dependency>
         </dependencies>
     </dependencyManagement>
@@ -195,6 +221,7 @@
         <module>jetty-session-manager</module>
         <module>spring-session-repository</module>
         <module>in-memory</module>
+        <module>test</module>
     </modules>
 
     <profiles>
