--- a/test/pom.xml
+++ b/test/pom.xml
@@ -9,8 +9,8 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>simple-orm-in-memory</artifactId>
-    <name>Simple ORM: In Memory</name>
+    <artifactId>simple-orm-test</artifactId>
+    <name>Simple ORM: Test</name>
     <packaging>jar</packaging>
 
     <dependencies>
@@ -20,10 +20,25 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.neolumin.simpleorm</groupId>
-            <artifactId>simple-orm-test</artifactId>
-            <version>${project.version}</version>
-            <scope>test</scope>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 </project>
