--- a/jetty-session-manager/pom.xml
+++ b/jetty-session-manager/pom.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <groupId>org.neolumin.simpleorm</groupId>
+        <groupId>com.v5analytics.simpleorm</groupId>
         <artifactId>simple-orm</artifactId>
-        <version>0.1.1-SNAPSHOT</version>
+        <version>0.2.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -17,7 +17,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.neolumin.simpleorm</groupId>
+            <groupId>com.v5analytics.simpleorm</groupId>
             <artifactId>simple-orm-core</artifactId>
             <version>${project.version}</version>
         </dependency>
