--- a/pom.xml
+++ b/pom.xml
@@ -8,9 +8,9 @@
         <version>7</version>
     </parent>
 
-    <groupId>org.neolumin.simpleorm</groupId>
+    <groupId>com.v5analytics.simpleorm</groupId>
     <artifactId>simple-orm</artifactId>
-    <version>0.1.1-SNAPSHOT</version>
+    <version>0.2.0-SNAPSHOT</version>
     <name>Simple ORM</name>
     <packaging>pom</packaging>
     <description>Simple ORM for Accumulo and SQL</description>
