--- a/test/pom.xml
+++ b/test/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>simple-orm</artifactId>
-        <groupId>org.neolumin.simpleorm</groupId>
-        <version>0.1.1-SNAPSHOT</version>
+        <groupId>com.v5analytics.simpleorm</groupId>
+        <version>0.2.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -15,7 +15,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.neolumin.simpleorm</groupId>
+            <groupId>com.v5analytics.simpleorm</groupId>
             <artifactId>simple-orm-core</artifactId>
             <version>${project.version}</version>
         </dependency>
