--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.sonatype.oss</groupId>
@@ -10,7 +9,7 @@
 
     <groupId>com.v5analytics.simpleorm</groupId>
     <artifactId>simple-orm</artifactId>
-    <version>0.2.0-SNAPSHOT</version>
+    <version>1.0.0</version>
     <name>Simple ORM</name>
     <packaging>pom</packaging>
     <description>Simple ORM for Accumulo and SQL</description>
@@ -29,7 +28,7 @@
         <url>scm:git:git@github.com:v5analytics/simple-orm.git</url>
         <connection>scm:git:git@github.com:v5analytics/simple-orm.git</connection>
         <developerConnection>scm:git:git@github.com:v5analytics/simple-orm.git</developerConnection>
-        <tag>HEAD</tag>
+        <tag>simple-orm-1.0.0</tag>
     </scm>
 
     <issueManagement>
