--- a/accumulo/pom.xml
+++ b/accumulo/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>com.v5analytics.simpleorm</groupId>
         <artifactId>simple-orm</artifactId>
-        <version>1.0.1</version>
+        <version>1.0.2-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
