--- a/in-memory/pom.xml
+++ b/in-memory/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>simple-orm</artifactId>
         <groupId>com.v5analytics.simpleorm</groupId>
-        <version>1.0.2</version>
+        <version>1.0.3-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
