--- a/test/pom.xml
+++ b/test/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>simple-orm</artifactId>
         <groupId>com.v5analytics.simpleorm</groupId>
-        <version>1.1.0</version>
+        <version>1.1.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
