--- a/pom.xml
+++ b/pom.xml
@@ -59,7 +59,7 @@
         <slf4j.version>1.7.10</slf4j.version>
         <junit.version>4.11</junit.version>
         <h2.version>1.4.191</h2.version>
-        <dbcp2.version>2.1.1</dbcp2.version>
+        <HikariCP.version>2.4.6</HikariCP.version>
 
         <maven.plugin.gpg.version>1.4</maven.plugin.gpg.version>
         <maven.plugin.javadoc.version>2.9.1</maven.plugin.javadoc.version>
